[package]
name = "pomelo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.1"
dirs = "5.0.1"
glob = "0.3.1"
color-print = "0.3.5"
anyhow = "1.0.75"
